# ai-apis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
src/openai_multi_backend/: __init__.py  config.py  errors.py  logging.py  main.py  metrics.py  security.py
src/openai_multi_backend/api/: health.py  openai_routes.py  schemas.py
src/openai_multi_backend/models/: __init__.py  audio.py  base.py  download.py  image.py  registry.py  speech.py  text.py
tests/: conftest.py  test_openai_api.py
